<resources>
    <string name="app_name">Monumental India</string>
    <string name="tajmahal">The Taj Mahal is an ivory-white marble mausoleum on the right bank of the river Yamuna in Agra, Uttar Pradesh, India. It was commissioned in 1631 by the fifth Mughal emperor, Shah Jahan (r. 1628–1658) to house the tomb of his favourite wife, Mumtaz Mahal; it also houses the tomb of Shah Jahan himself. The tomb is the centrepiece of a 17-hectare (42-acre) complex, which includes a mosque and a guest house, and is set in formal gardens bounded on three sides by a crenellated wall.</string>
    <string name="suprabhat">Suprabhat!</string>
    <string name="select_your_city">Select your City</string>
    <string name="delhi">DELHI</string>
    <string name="humayuntomb">Humayun\'s tomb (Persian: Maqbara-i Humayun) is the tomb of Humayun, the second emperor of the Mughal Empire, in Delhi, India.[1] The tomb was commissioned by Humayun\'s first wife and chief consort, Empress Bega Begum under her patronage[2][3][4][5][6] in 1558, and designed by Mirak Mirza Ghiyas and his son, Sayyid Muhammad,[7] Persian architects chosen by her.[8][9] It was the first garden-tomb on the Indian subcontinent,[10] and is located in Nizamuddin East, Delhi, India, close to the Dina-panah Citadel, also known as Purana Qila (Old Fort), that Humayun found in 1538. </string>
    <string name="agra">AGRA</string>
    <string name="mumbai">MUMBAI</string>
    <string name="jantarmantar">Jantar Mantar is located in the modern city of New Delhi. “Jantar Mantar” it means “instruments for measuring the harmony of the heavens”.[1] It consists of 13 architectural astronomy instruments. The site is one of five built by Maharaja Jai Singh II of Jaipur, from 1723 onwards, revising the calendar and astronomical tables. Jai Singh, born in 1688 into a royal Rajput family that ruled the regional kingdom, was born into an era of education that maintained a keen interest in astronomy. There is a plaque fixed on one of the structures in the Jantar Mantar observatory in New Delhi that was placed there in 1910 mistakenly dating the construction of the complex to the year 1710.</string>
    <string name="punjab">PUNJAB</string>
    <string name="redfort">The Red Fort or Lal Qila (Hindustani: [laːl qiːlaː]) is a historic fort in the Old Delhi neighbourhood of Delhi, India, that historically served as the main residence of the Mughal emperors. Emperor Shah Jahan commissioned construction of the Red Fort on 12th May 1638, when he decided to shift his capital from Agra to Delhi. Originally red and white, its design is credited to architect Ustad Ahmad Lahori, who also constructed the Taj Mahal. The fort represents the peak in Mughal architecture under Shah Jahan and combines Persianate palace architecture with Indian traditions.</string>
    <string name="gatewayofindia">The Gateway of India is an arch-monument built in the early 20th century in the city of Mumbai (Bombay), India. It was erected to commemorate the landing of King-Emperor George V, the first British monarch to visit India, in December 1911 at Strand Road near Wellington Fountain. The foundation stone was laid in March 1913 for a monument built in the Indo-Islamic style, inspired by elements of 16th-century Gujarati architecture. The final design of the monument by architect George Wittet was sanctioned only in 1914, and construction was completed in 1924. The structure is a memorial arch made of basalt, which is 26 metres (85 feet) high, with an architectural resemblance to a triumphial arch as well as Gujarati architecture of the time.</string>
    <string name="todo">TODO</string>
    <string name="goldentemple">The Golden Temple (also known as the Harmandir Sahib, lit. \'abode of God\', Punjabi pronunciation: [ɦəɾᵊmən̪d̪əɾᵊ saːɦ(ɪ)bᵊ], or the Darbār Sahib, \'exalted court\', is a gurdwara located in the city of Amritsar, Punjab, India.[3][4] It is the preeminent spiritual site of Sikhism. It is one of the holiest sites in Sikhism, alongside the Gurdwara Darbar Sahib Kartarpur in Kartarpur, and Gurdwara Janam Asthan in Nankana SahibThe man-made pool on the site of the temple was completed by the fourth Sikh Guru, Guru Ram Das, in 1577.[6][7] In 1604, Guru Arjan Dev, the fifth Sikh Guru, placed a copy of the Adi Granth in Harmandir Sahib and is the prominent figure in development of gurudwara who built it in the 16th Century.</string>
    <string name="backbtn">TODO</string>
    <string name="explore_punjab">Explore Punjab:</string>
    <string name="imageview">TODO</string>
    <string name="button">Button</string>
    <string name="explore_delhi">Explore Delhi:</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="explore_agra">Explore Agra:</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="read_more">READ MORE</string>
    <string name="explore_mumbai">Explore Mumbai:</string>
    <string name="todo7">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>