<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_tajmahal"
    tools:context=".tajmahal">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/peachyyellow"
        android:layout_height="match_parent"

        tools:context=".delhi">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="15dp"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/todo6"
                    android:scaleType="centerCrop"
                    android:src="@drawable/red_fort"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/yatra_one"
                    android:text="@string/redfort"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="VisualLintLongText"></TextView>

                <TextView
                    android:id="@+id/txtlink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/yatra_one"
                    android:text="@string/read_more"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button1"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape"
                    android:fontFamily="@font/yatra_one"
                    android:text="Location"
                    android:textColor="@color/peachyyellow"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtlink"></androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape"
                    android:id="@+id/button2"
                    android:text="Buy Tickets"
                    android:textSize="18dp"
                    android:fontFamily="@font/yatra_one"
                    android:textColor="@color/peachyyellow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.52"
                    app:layout_constraintStart_toEndOf="@+id/button1"
                    app:layout_constraintTop_toBottomOf="@id/txtlink"></androidx.appcompat.widget.AppCompatButton>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>